Reduce the number of ArchivePathTree instances for the same path and opening same JARs multiple times
Co-authored by gsmet